--- a/nicocomment.config.sample
+++ b/nicocomment.config.sample
@@ -24,10 +24,10 @@ keys=root
 
 [logger_root]
 level=NOTSET
-handlers=stdout
+handlers=file
 
 [handlers]
-keys=stdout
+keys=stdout,file
 
 [handler_stdout]
 class=StreamHandler
@@ -36,10 +36,10 @@ formatter=default
 args=(sys.stdout,)
 
 [handler_file]
-class=FileHandler
+class=handlers.RotatingFileHandler
 level=NOTSET
 formatter=default
-args=("log/nicocomment.log",'a')
+args=(os.getcwd() + "/log/nicocomment.log", 'a', (500*1024*1024), 10)
 
 [formatters]
 keys=default
