--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ log/*.log*
 log/nohup.out
 log/live.*
 
-nicocomment.config*
-!nicocomment.config.sample
-nicocomment.env*
-!nicocomment.env.sample
+*.config*
+!*.config.sample
+*.env*
+!*.env.sample
