--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendors/tweepy"]
 	path = vendors/tweepy
-	url = git@github.com:tweepy/tweepy.git
+	url = https://github.com/tweepy/tweepy.git
