--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
 - '2.7'
 install:
 - pip install http://sourceforge.net/projects/pychecker/files/pychecker/0.8.19/pychecker-0.8.19.tar.gz/download
+- pip install -r requirements.txt --use-mirrors
 script: ./run_tests.sh
 env:
   global:
