Added mute user/community feature.

--- a/nicocomment.config.sample
+++ b/nicocomment.config.sample
@@ -4,6 +4,8 @@ password = p@ssword
 
 [nicolive]
 live_logging = true
+mute_user_ids = 11111,22222
+mute_community_ids = co11111,co22222
 
 [community-all]
 # @twitter_account
