--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
+PyYAML==3.10
 argparse==1.2.1
+cov-core==1.7
+coverage==3.7.1
 distribute==0.6.34
+execnet==1.1
 lxml==3.2.4
 pep8==1.4.6
 py==1.4.19
 pychecker==0.8.19
 pytest==2.5.1
+pytest-cache==1.0
 pytest-capturelog==0.7
+pytest-cov==1.6
+pytest-pep8==1.0.5
+python-coveralls==2.4.2
+requests==2.1.0
+sh==1.09
+six==1.4.1
 wsgiref==0.1.2
